# tazodie-crisscross

./: CHANGES  CMakeLists.txt  COPYING  Common.vsprops  CrissCross.dsw  CrissCross_vs2003.sln  CrissCross_vs2005.sln  CrissCross_vs2008.sln  Doxyfile  Doxyfile_win32  Makefile  TODO  Technetium.dsw  Technetium_vs2003.sln  clean.sh  common.mk  dev-roadmap.html
Application/: Application.dsp  Application.vcproj  Makefile  header.h  main.cpp
Application/Application.xcodeproj/: project.pbxproj
CrissCross_net/: CrissCross_net.vcproj  core_network.cpp  core_socket.cpp  core_socket.h  universal_include.cpp  universal_include.h
TestSuite/: CMakeLists.txt  Makefile  TestSuite.dsp  TestSuite.vcproj  TestSuite_vs2003.vcproj  TestSuite_vs2005.vcproj  TestSuite_vs2008.vcproj  avltree.cpp  avltree.h  bubblesort.cpp  bubblesort.h  combsort.cpp  combsort.h  compare.cpp  compare.h  darray.cpp  darray.h  datatypes.cpp  datatypes.h  dstack.cpp  dstack.h  fail.cpp  fail.h  hashtable.cpp  hashtable.h  header.h  heapsort.cpp  heapsort.h  insertionsort.cpp  insertionsort.h  llist.cpp  llist.h  main.cpp  md2.cpp  md2.h  md4.cpp  md4.h  md5.cpp  md5.h  mergesort.cpp  (+27 more)
TestSuite/TestSuite.xcodeproj/: project.pbxproj
contrib/fastdep-0.15/: Makefile
contrib/fastdep-0.16/: CheckVersion.h  CompileState.h  Define.h  Element.h  Expression.h  FileCache.cc  FileCache.h  FileStructure.h  If.h  Include.h  Makefile  MappedFile.cc  MappedFile.h  Sequence.h  os.h  realpath.cc
doc/: CrisCross-0.6.6-doc.tbz2  CrissCross-v0.6.0.rar  CrissCross-v0.6.1.rar  CrissCross-v0.6.5.tbz2  svn-documentation.rar
doc/html/: GetWinVer_8h-source.html  MiniVersion_8h-source.html  annotated.html  build__number_8h-source.html  classCMiniVersion-members.html  classCMiniVersion.html  classCrissCross_1_1Data_1_1BinaryNode-members.html  classCrissCross_1_1Data_1_1BinaryNode.html  classCrissCross_1_1Data_1_1CombSort-members.html  classCrissCross_1_1Data_1_1CombSort.html  classCrissCross_1_1Data_1_1DArray-members.html  classCrissCross_1_1Data_1_1DArray.html  classCrissCross_1_1Data_1_1DStack-members.html  classCrissCross_1_1Data_1_1DStack.html  classCrissCross_1_1Data_1_1HeapSort-members.html  classCrissCross_1_1Data_1_1HeapSort.html  classCrissCross_1_1Data_1_1LList-members.html  classCrissCross_1_1Data_1_1LList.html  classCrissCross_1_1Data_1_1QuickSort-members.html  classCrissCross_1_1Data_1_1QuickSort.html  classCrissCross_1_1Data_1_1RedBlackNode-members.html  classCrissCross_1_1Data_1_1RedBlackNode.html  classCrissCross_1_1Data_1_1RedBlackTree-members.html  (+104 more)
examples/: CMakeLists.txt  ExamplesCommmon.vsprops  Makefile
html/: annotated.html  class_assertion_failure_exception-members.html  class_assertion_failure_exception.html  class_core_console-members.html  class_core_console.html  class_core_debug_log-members.html  class_core_debug_log.html  class_core_debug_log_data-members.html  class_core_debug_log_data.html  class_core_exception-members.html  class_core_exception.html  class_core_i_o-members.html  class_core_i_o.html  class_core_mutex-members.html  class_core_mutex.html  class_core_system-members.html  class_core_system.html  class_core_thread-members.html  class_core_thread.html  class_criss_cross_1_1_data_1_1_d_array-members.html  class_criss_cross_1_1_data_1_1_d_array.html  class_criss_cross_1_1_data_1_1_d_stack-members.html  class_criss_cross_1_1_data_1_1_d_stack.html  class_criss_cross_1_1_data_1_1_l_list-members.html  class_criss_cross_1_1_data_1_1_l_list.html  class_criss_cross_1_1_data_1_1_l_list_item-members.html  class_criss_cross_1_1_data_1_1_l_list_item.html  class_criss_cross_1_1_data_1_1_red_black_tree-members.html  class_criss_cross_1_1_data_1_1_red_black_tree.html  class_criss_cross_1_1_debug_1_1_assertion_failure_exception-members.html  class_criss_cross_1_1_debug_1_1_assertion_failure_exception.html  class_criss_cross_1_1_debug_1_1_core_exception-members.html  class_criss_cross_1_1_debug_1_1_core_exception.html  class_criss_cross_1_1_debug_1_1_invalid_call_exception-members.html  class_criss_cross_1_1_debug_1_1_invalid_call_exception.html  class_criss_cross_1_1_i_o_1_1_core_console-members.html  class_criss_cross_1_1_i_o_1_1_core_console.html  class_criss_cross_1_1_i_o_1_1_core_i_o-members.html  class_criss_cross_1_1_i_o_1_1_core_i_o.html  class_criss_cross_1_1_i_o_1_1_text_reader-members.html  (+153 more)
source/: CMakeLists.txt  CrissCross.dsp  CrissCross_vs2003.vcproj  CrissCross_vs2005.icproj  CrissCross_vs2005.vcproj  CrissCross_vs2008.vcproj  Makefile  Makefile-lib  Technetium.dsp  Technetium_vs2003.vcproj  auto-depend.mk  compare.cpp  compare.h  console.cpp  core_console.cpp  core_console.h  core_cpuid.cpp  core_cpuid.h  core_databuffer.cpp  core_debug.cpp  core_debug.h  core_debuglog.cpp  core_debuglog.h  core_deprecate.h  core_error.cpp  core_error.h  core_exception.h  core_filesystem.cpp  core_filesystem.h  core_io.cpp  core_io.h  core_io_reader.cpp  core_io_writer.cpp  core_mutex.cpp  core_mutex.h  core_network.cpp  core_network.h  core_socket.cpp  core_socket.h  core_system.cpp  (+53 more)
source/XCrashReports/: GetWinVer.cpp  GetWinVer.h  MiniVersion.cpp  MiniVersion.h  exception_handler.cpp  exception_handler.h
source/crisscross/: avltree.cpp  avltree.h  bplustree.cpp  bplustree.h  bubblesort.h  combsort.cpp  combsort.h  compare.h  console.h  core_compare.h  core_console.h  core_cpuid.h  core_databuffer.h  core_debug.h  core_debuglog.h  core_deprecate.h  core_error.h  core_filesystem.h  core_io.h  core_io_reader.h  core_io_writer.h  core_mutex.h  core_network.h  core_socket.h  core_system.h  core_thread.h  cpuid.h  crisscross.h  darray.cpp  darray.h  datatypes.h  debug.h  deprecate.h  dstack.cpp  dstack.h  encoding.h  error.h  exception_handler.h  filereader.h  filesystem.h  (+55 more)
source/crisscross/datastructures/: darray.cpp  darray.h  dstack.cpp  rbtree.cpp  rbtree.h
source/datastructures/: darray.cpp  darray.h  dstack.cpp  dstack.h  llist.cpp  llist.h  rbtree.cpp  rbtree.h
tools/: GenerateBuildNumber.sh  Makefile  is_ge.sh  is_gt.sh  preproc_defines.sh  wordcount.sh
xcode/: CrissCross_Prefix.pch
(+108 files in other folders)
